--- a/src/Joosh.DotnetInstallHelper.Console/Joosh.DotnetInstallHelper.Console.csproj
+++ b/src/Joosh.DotnetInstallHelper.Console/Joosh.DotnetInstallHelper.Console.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
