--- a/src/Joosh.DotnetInstallHelper.Console/Joosh.DotnetInstallHelper.Console.csproj
+++ b/src/Joosh.DotnetInstallHelper.Console/Joosh.DotnetInstallHelper.Console.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
+  <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
+    <DefineConstants>WINDOWS</DefineConstants>
+  </PropertyGroup>
+
 </Project>
